0.4a	Support for multiple result sets.
	No longer rely on SQLRowCount for number of rows returned by
	SELECTs etc (apparently some drivers don't do it).
	Support for DSN-less connection strings.
	Various bug fixes.
	Wrote the beginnings of a DejaGNU test suite.
	gettext support.
	Use Unicode box-drawing chars in UTF-8 locales.

0.3a
	Further UI tweaks.
	Vertical and horizontal output now correctly handle newlines, tabs
	and multibyte chars.
	Half-decent parsing for command parameters etc.
	Improved portability - verified to compile on Debian, Fedora,
	FreeBSD, OpenBSD and Mac OS X.

0.2a
	Major tweaks to improve user interface.
	Fixed bug with \e missing off last character.
	Removed spurious guile dependency.

0.1a
	Initial release.