@@ -14,6 +14,7 @@ improve /help
 hexdump-style output for binary data
 SQLBrowseConnect?  do any unix drivers support it?
 List drivers in -l using SQLDrivers?
+Support strings with embedded NULL characters in result sets?
 
 aliases/prepared statements
 *alias getrow SELECT * FROM TABLE WHERE id = ?;
